--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -845,6 +845,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
@@ -861,7 +862,8 @@
         {points:null, minutes:10, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-        {points:0, minutes:90, goals:0, assists:0, cards:0, comment:'(6,0)'}
+        {points:0, minutes:90, goals:0, assists:0, cards:0, comment:'(6,0)'},
+        {points:2, minutes:90, goals:0, assists:0, cards:0, comment:'(6,4)'}
       ]},
 
     { id:3, name:'Álvaro', pos:'Portero', status:'OK', special: false, performances:[
@@ -877,6 +879,7 @@
         {points:null, minutes:80, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:-3, minutes:90, goals:0, assists:0, cards:0, comment:'(5,0)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
       ]},
 
@@ -893,10 +896,11 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-        {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,0)'}
+        {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,0)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
       ]},
 
-    { id:5, name:'J. Martínez', pos:'Centrocampista', status:'Duda', special: false, performances:[
+    { id:5, name:'J. Martínez', pos:'Centrocampista', status:'OK', special: false, performances:[
         {points:3, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,7)'},
         {points:null, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (Sin grabación)'},
         {points:9, minutes:63, goals:1, assists:0, cards:0, comment:'↪️⚽ (7,3+⚽)'},
@@ -909,7 +913,8 @@
         {points:null, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (-)'},
         {points:null, minutes:87, goals:0, assists:0, cards:1, comment:'🟨↪️ (-)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
+        {points:4, minutes:90, goals:0, assists:0, cards:0, comment:'(6,8)'}
       ]},
 
     { id:6, name:'Rafa Crooke', pos:'Defensa', status:'OK', special: false, performances:[
@@ -924,6 +929,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
       ]},
@@ -941,7 +947,8 @@
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-        {points:4, minutes:82, goals:0, assists:0, cards:0, comment:'↪️ (6,8)'}
+        {points:4, minutes:82, goals:0, assists:0, cards:0, comment:'↪️ (6,8)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
       ]},
 
     { id:8, name:'Rodri', pos:'Defensa', status:'OK', special: false, performances:[
@@ -957,7 +964,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:-2, minutes:90, goals:0, assists:0, cards:0, comment:'(5,6)'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
+        {points:4, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,9)'}
       ]},
 
     { id:9, name:'Adriano', pos:'Defensa', status:'Duda', special: false, performances:[
@@ -973,7 +981,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
         {points:-1, minutes:90, goals:0, assists:0, cards:0, comment:'(5,8)'},
-        {points:2, minutes:90, goals:0, assists:0, cards:0, comment:'(6,4)'}
+        {points:2, minutes:90, goals:0, assists:0, cards:0, comment:'(6,4)'},
+        {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,0)'}
       ]},
 
     { id:10, name:'Á. Infante', pos:'Defensa', status:'OK', special: false, performances:[
@@ -989,7 +998,8 @@
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-        {points:3, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'}
+        {points:3, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
       ]},
 
     { id:11, name:'A. Molina', pos:'Centrocampista', status:'Duda', special: false, performances:[
@@ -1005,10 +1015,11 @@
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:null, minutes:3, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:5, minutes:90, goals:0, assists:1, cards:0, comment:'🅰️ (6,8+🅰️)'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
+        {points:3, minutes:17, goals:0, assists:0, cards:0, comment:'↩️ (6,7)'}
       ]},
 
-    { id:12, name:'L. Lausín', pos:'Defensa', status:'Lesionado', special: false, performances:[
+    { id:12, name:'L. Lausín', pos:'Defensa', status:'Duda', special: false, performances:[
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
         {points:2, minutes:20, goals:0, assists:0, cards:0, comment:'↩️ (6,5)'},
@@ -1021,10 +1032,11 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
-    { id:13, name:'J. Zarcero', pos:'Defensa', status:'OK', special: false, performances:[
+    { id:13, name:'J. Zarcero', pos:'Defensa', status:'Lesionado', special: false, performances:[
         {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,0)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:4, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,8)'},
@@ -1037,7 +1049,8 @@
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
         {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,2)'},
-        {points:4, minutes:90, goals:0, assists:0, cards:0, comment:'(6,9)'}
+        {points:4, minutes:90, goals:0, assists:0, cards:0, comment:'(6,9)'},
+        {points:3, minutes:79, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,6)'},
       ]},
 
     { id:14, name:'Kito', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1053,7 +1066,8 @@
         {points:null, minutes:45, goals:0, assists:1, cards:0, comment:'↩️🅰️ (0,0+🅰️)'},
         {points:null, minutes:45, goals:1, assists:1, cards:0, comment:'↩️⚽🅰️ (0,0+⚽+🅰️)'},
         {points:3, minutes:33, goals:0, assists:0, cards:0, comment:'↩️ (6,7)'},
-        {points:11, minutes:74, goals:1, assists:0, cards:0, comment:'↪️⚽ (7,6+⚽)'}
+        {points:11, minutes:74, goals:1, assists:0, cards:0, comment:'↪️⚽ (7,6+⚽)'},
+        {points:8, minutes:90, goals:0, assists:1, cards:0, comment:'🅰️ (7,4+🅰️)'}
       ]},
 
     { id:15, name:'Víctor Jaén', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1069,7 +1083,8 @@
         {points:null, minutes:10, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:2, minutes:16, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
-        {points:2, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'}
+        {points:2, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
+        {points:3, minutes:11, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'}
       ]},
 
     { id:16, name:'Á. Brito', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1085,7 +1100,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-        {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'}
+        {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'},
+        {points:4, minutes:73, goals:0, assists:0, cards:0, comment:'↪️ (6,9)'}
       ]},
 
     { id:17, name:'Pablo', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1101,7 +1117,8 @@
         {points:null, minutes:80, goals:0, assists:0, cards:1, comment:'🟨↪️ (-)'},
         {points:null, minutes:82, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,2)'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
+        {points:2, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'}
       ]},
 
     { id:18, name:'Javi Pardo', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1117,7 +1134,8 @@
         {points:null, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (0,0+⚽)'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:1, minutes:74, goals:0, assists:0, cards:0, comment:'↪️ (6,3)'},
-        {points:2, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,5)'}
+        {points:2, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,5)'},
+        {points:3, minutes:73, goals:0, assists:0, cards:0, comment:'↪️ (6,7)'}
       ]},
 
     { id:19, name:'Mario', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1133,7 +1151,8 @@
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:null, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,0)'},
-        {points:3, minutes:16, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'}
+        {points:3, minutes:16, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'},
+        {points:2, minutes:17, goals:0, assists:0, cards:0, comment:'↩️ (6,5)'}
       ]},
 
     { id:20, name:'J. Ogayar', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1149,7 +1168,8 @@
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
         {points:null, minutes:82, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:9, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (7,2+⚽)'},
-        {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,0)'}
+        {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,0)'},
+        {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,1)'}
       ]},
 
     { id:21, name:'Rodri de Castro', pos:'Atacante', status:'OK', special: false, performances:[
@@ -1165,7 +1185,8 @@
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:3, minutes:57, goals:0, assists:0, cards:0, comment:'↪️ (6,7)'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
+        {points:3, minutes:45, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,6)'}
       ]},
 
     { id:22, name:'H. Panizo', pos:'Atacante', status:'Lesionado', special: false, performances:[
@@ -1181,7 +1202,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:4, minutes:74, goals:0, assists:0, cards:0, comment:'↪️ (6,8)'},
-        {points:9, minutes:82, goals:0, assists:1, cards:0, comment:'↪️🅰️ (7,6+🅰️)'}
+        {points:9, minutes:82, goals:0, assists:1, cards:0, comment:'↪️🅰️ (7,6+🅰️)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
     { id:23, name:'Manu Medina', pos:'Atacante', status:'Duda', special: false, performances:[
@@ -1196,6 +1218,7 @@
         {points:1, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (6,3)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
@@ -1213,7 +1236,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-        {points:2, minutes:32, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'}
+        {points:2, minutes:32, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
+        {points:2, minutes:59, goals:0, assists:0, cards:0, comment:'↪️ (6,4)'}
       ]},
 
     { id:25, name:'S. Griñán', pos:'Atacante', status:'OK', special: false, performances:[
@@ -1229,7 +1253,8 @@
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
         {points:null, minutes:90, goals:2, assists:0, cards:0, comment:'⚽⚽ (0,0+⚽⚽)'},
         {points:2, minutes:16, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
-        {points:2, minutes:58, goals:0, assists:0, cards:0, comment:'↪️ (6,5)'}
+        {points:2, minutes:58, goals:0, assists:0, cards:0, comment:'↪️ (6,5)'},
+        {points:9, minutes:31, goals:1, assists:0, cards:0, comment:'↩️⚽ (7,2+⚽)'}
       ]},
 
     { id:26, name:'Manu (JB)', pos:'Defensa', status:'OK', special: true, performances:[
@@ -1244,17 +1269,21 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'}
       ]}
   ];
   
   // 📰 Noticias del equipo
   const news = [
+    { playerId: 13, title: 'Lesión', text: "Fisura en la órbita, 1-3 semanas" },
+    { playerId: null, title: 'Jornada 14', text: "CD Galapagar 'C' 4-1 E.F.M.O. Boadilla 'B'", url: 'InformeJ14.html' },
     { playerId: 22, title: 'Lesión', text: "Esguince de tobillo, 1-3 semanas" },
+    { playerId: null, title: 'Jornada 13', text: "CDE Colegio Juan Pablo II 4-1 E.F.M.O. Boadilla 'B'", url: 'InformeJ13.html' },
     { playerId: null, title: 'Stats J8', text: "Estadísticas detalladas de la J8", url: 'StatsJ8.html' },
     { playerId: null, title: 'Jornada 12', text: "E.F.M.O. Boadilla 'B' 1-6 UD Las Matas CF", url: 'InformeJ12.html' },
     { playerId: 11, title: 'Duda', text: "Molestias de tobillo, 1-2 semanas" },
-    { playerId: 5, title: 'Duda', text: "Lesión de tobillo, 3-5 semanas" },
+   // { playerId: 5, title: 'Duda', text: "Lesión de tobillo, 3-5 semanas" }, //Martínez
     { playerId: 23, title: 'Duda', text: "Fisura de peroné, 1-3 meses" },
    // { playerId: 2, title: 'Duda', text: "Golpe en la cadera, 6-10 días" }, //Gabri
     { playerId: null, title: 'Jornada 11', text: "Escuela Europea CF 3-3 E.F.M.O. Boadilla 'B'", url: 'InformeJ11.html' },
@@ -1266,7 +1295,7 @@
     { playerId: null, title: 'Jornada 7', text: "CDE Fútbol Club Samba-Las Rozas 1-1 E.F.M.O. Boadilla 'B'", url: 'InformeJ7.html' },
    // { playerId: 6, title: 'Duda', text: "Lesión de tobillo, 3-5 semanas" }, //Rafa
     { playerId: null, title: 'Jornada 6', text: "E.F.M.O. Boadilla 'B' 2-1 CD Prodet Pozuelo", url: 'InformeJ6.html' },
-    { playerId: 12, title: 'Lesión', text: "Luxación de rodilla, 3-4 meses" },
+    { playerId: 12, title: 'Duda', text: "Luxación de rodilla, 3-4 meses" },
     { playerId: null, title: 'Jornada 5', text: "CD Retamar 3-2 E.F.M.O. Boadilla 'B'", url: 'InformeJ5.html' },
     { playerId: null, title: 'Jornada 4', text: "E.F.M.O. Boadilla 'B' 0-1 CD Puerta de Madrid 'B'", url: 'InformeJ4.html' },
    // { playerId: 8, title: 'Duda', text: "Pubalgia, 7-10 semanas" }, //Rodri
