--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -968,7 +968,7 @@
         {points:4, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,9)'}
       ]},
 
-    { id:9, name:'Adriano', pos:'Defensa', status:'Duda', special: false, performances:[
+    { id:9, name:'Adriano', pos:'Defensa', status:'OK', special: false, performances:[
         {points:9, minutes:90, goals:0, assists:0, cards:0, comment:'(7,8)'},
         {points:null, minutes:64, goals:0, assists:0, cards:1, comment:'🟨↪️ (Sin grabación)'},
         {points:2, minutes:27, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
@@ -1300,7 +1300,7 @@
     { playerId: null, title: 'Jornada 4', text: "E.F.M.O. Boadilla 'B' 0-1 CD Puerta de Madrid 'B'", url: 'InformeJ4.html' },
    // { playerId: 8, title: 'Duda', text: "Pubalgia, 7-10 semanas" }, //Rodri
    // { playerId: 24, title: 'Duda', text: "Edema óseo, 9-10 semanas" }, //Manu de Vicente
-    { playerId: 9, title: 'Duda', text: "Molestias en el talón y en la pierna, 2-3 meses" }, //Adriano
+   // { playerId: 9, title: 'Duda', text: "Molestias en el talón y en la pierna, 2-3 meses" }, //Adriano
     { playerId: null, title: 'Jornada 3', text: "Gimnástica Colmenarejo CD 'B' 4-2 E.F.M.O. Boadilla 'B'", url: 'InformeJ3.html' },
     { playerId: 1, title: 'Duda', text: "Rotura fibrilar en el cuádriceps, 12-14 semanas" },
     { playerId: null, title: 'Jornada 2', text: "E.F.M.O. Boadilla 'B' 1-3 CDE F.B. Dptvo. Torrelodones", url: 'InformeJ2.html' },
