--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -1002,7 +1002,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
       ]},
 
-    { id:11, name:'A. Molina', pos:'Centrocampista', status:'Duda', special: false, performances:[
+    { id:11, name:'A. Molina', pos:'Centrocampista', status:'OK', special: false, performances:[
         {points:4, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (6,8)'},
         {points:null, minutes:75, goals:0, assists:0, cards:0, comment:'↪️ (Sin grabación)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
@@ -1282,7 +1282,7 @@
     { playerId: null, title: 'Jornada 13', text: "CDE Colegio Juan Pablo II 4-1 E.F.M.O. Boadilla 'B'", url: 'InformeJ13.html' },
     { playerId: null, title: 'Stats J8', text: "Estadísticas detalladas de la J8", url: 'StatsJ8.html' },
     { playerId: null, title: 'Jornada 12', text: "E.F.M.O. Boadilla 'B' 1-6 UD Las Matas CF", url: 'InformeJ12.html' },
-    { playerId: 11, title: 'Duda', text: "Molestias de tobillo, 1-2 semanas" },
+   // { playerId: 11, title: 'Duda', text: "Molestias de tobillo, 1-2 semanas" }, //Molina
    // { playerId: 5, title: 'Duda', text: "Lesión de tobillo, 3-5 semanas" }, //Martínez
     { playerId: 23, title: 'Duda', text: "Fisura de peroné, 1-3 meses" },
    // { playerId: 2, title: 'Duda', text: "Golpe en la cadera, 6-10 días" }, //Gabri
