--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -985,7 +985,7 @@
         {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,0)'}
       ]},
 
-    { id:10, name:'Á. Infante', pos:'Defensa', status:'OK', special: false, performances:[
+    { id:10, name:'Á. Infante', pos:'Defensa', status:'Duda', special: false, performances:[
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
@@ -1276,6 +1276,7 @@
   
   // 📰 Noticias del equipo
   const news = [
+    { playerId: 10, title: 'Duda', text: "Molestias de cuello, 7-10 días" },
     { playerId: null, title: 'Stats J14', text: "Estadísticas detalladas de la J14", url: 'StatsJ14.html' },
     { playerId: 13, title: 'Lesión', text: "Fisura en la órbita, 1-3 semanas" },
     { playerId: null, title: 'Jornada 14', text: "CD Galapagar 'C' 4-1 E.F.M.O. Boadilla 'B'", url: 'InformeJ14.html' },
