--- a/StatsJ14.html
+++ b/StatsJ14.html
@@ -136,6 +136,30 @@
             <div class="stat-row"><span class="stat-label">Duelos suelo</span><span class="stat-value">0/2</span></div>
         </div>
     </div>
+    
+    <div class="player-card">
+        <div class="player-header">
+            <div>
+                <span class="player-name">Manu de V.</span>
+                <span class="player-pos">DC</span>
+            </div>
+            <div class="rating-badge">6.2</div>
+        </div>
+        <div class="stats-container">
+            <div class="stat-row"><span class="stat-label">Minutos</span><span class="stat-value">59</span></div>
+            <div class="stat-row"><span class="stat-label">Goles en contra</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Ocasiones claras falladas</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Tiros fuera</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos aéreos</span><span class="stat-value">5/8</span></div>
+            <div class="stat-row"><span class="stat-label">Despejes</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Pases cortos</span><span class="stat-value">9/11</span></div>
+            <div class="stat-row"><span class="stat-label">Recuperaciones</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Fueras de juego</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Posesiones perdidas</span><span class="stat-value">5</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos suelo</span><span class="stat-value">1/1</span></div>
+            <div class="stat-row"><span class="stat-label">Tiros bloqueados</span><span class="stat-value">1</span></div>
+        </div>
+    </div>
 </div>
 
 </body>
