--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -1189,7 +1189,7 @@
         {points:0, minutes:45, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,0)'}
       ]},
 
-    { id:22, name:'H. Panizo', pos:'Atacante', status:'Lesionado', special: false, performances:[
+    { id:22, name:'H. Panizo', pos:'Atacante', status:'Duda', special: false, performances:[
         {points:4, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (6,9)'},
         {points:null, minutes:64, goals:0, assists:0, cards:0, comment:'↪️ (Sin grabación)'},
         {points:4, minutes:27, goals:0, assists:0, cards:0, comment:'↩️ (6,9)'},
@@ -1280,7 +1280,7 @@
     { playerId: null, title: 'Stats J14', text: "Estadísticas detalladas de la J14", url: 'StatsJ14.html' },
     { playerId: 13, title: 'Lesión', text: "Fisura en la órbita, 1-3 semanas" },
     { playerId: null, title: 'Jornada 14', text: "CD Galapagar 'C' 4-1 E.F.M.O. Boadilla 'B'", url: 'InformeJ14.html' },
-    { playerId: 22, title: 'Lesión', text: "Esguince de tobillo, 1-3 semanas" },
+    { playerId: 22, title: 'Duda', text: "Esguince de tobillo, 1-3 semanas" },
     { playerId: null, title: 'Jornada 13', text: "CDE Colegio Juan Pablo II 4-1 E.F.M.O. Boadilla 'B'", url: 'InformeJ13.html' },
     { playerId: null, title: 'Stats J8', text: "Estadísticas detalladas de la J8", url: 'StatsJ8.html' },
     { playerId: null, title: 'Jornada 12', text: "E.F.M.O. Boadilla 'B' 1-6 UD Las Matas CF", url: 'InformeJ12.html' },
