--- a/StatsJ14.html
+++ b/StatsJ14.html
@@ -111,6 +111,58 @@
   </div>
   
 <div class="container">
+
+    <div class="player-card">
+        <div class="player-header">
+            <div>
+                <span class="player-name">Á. Brito</span>
+                <span class="player-pos">MCD</span>
+            </div>
+            <div class="rating-badge">7.0</div>
+        </div>
+        <div class="stats-container">
+            <div class="stat-row"><span class="stat-label">Minutos</span><span class="stat-value">73</span></div>
+            <div class="stat-row"><span class="stat-label">Goles en contra</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Recuperaciones</span><span class="stat-value">11</span></div>
+            <div class="stat-row"><span class="stat-label">Intercepciones</span><span class="stat-value">6</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos suelo</span><span class="stat-value">8/12</span></div>
+            <div class="stat-row"><span class="stat-label">Regates</span><span class="stat-value">3/3</span></div>
+            <div class="stat-row"><span class="stat-label">Entradas</span><span class="stat-value">2/2</span></div>
+            <div class="stat-row"><span class="stat-label">Pases cortos</span><span class="stat-value">14/18</span></div>
+            <div class="stat-row"><span class="stat-label">Pases largos</span><span class="stat-value">4/8</span></div>
+            <div class="stat-row"><span class="stat-label">Posesiones perdidas</span><span class="stat-value">12</span></div>
+            <div class="stat-row"><span class="stat-label">Faltas recibidas</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Despejes</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos aéreos</span><span class="stat-value">1/4</span></div>
+            <div class="stat-row"><span class="stat-label">Tiros bloqueados</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Faltas</span><span class="stat-value">2</span></div>
+        </div>
+    </div>
+
+    <div class="player-card">
+        <div class="player-header">
+            <div>
+                <span class="player-name">Javi Pardo</span>
+                <span class="player-pos">MCD/MD</span>
+            </div>
+            <div class="rating-badge">6.9</div>
+        </div>
+        <div class="stats-container">
+            <div class="stat-row"><span class="stat-label">Minutos</span><span class="stat-value">73</span></div>
+            <div class="stat-row"><span class="stat-label">Goles en contra</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Recuperaciones</span><span class="stat-value">8</span></div>
+            <div class="stat-row"><span class="stat-label">Intercepciones</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Despejes</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Pases cortos</span><span class="stat-value">10/11</span></div>
+            <div class="stat-row"><span class="stat-label">Tiros a puerta</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Faltas recibidas</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos suelo</span><span class="stat-value">3/6</span></div>
+            <div class="stat-row"><span class="stat-label">Posesiones perdidas</span><span class="stat-value">4</span></div>
+            <div class="stat-row"><span class="stat-label">Faltas</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos aéreos</span><span class="stat-value">0/2</span></div>
+        </div>
+    </div>
+    
     <div class="player-card">
         <div class="player-header">
             <div>
