--- a/StatsJ14.html
+++ b/StatsJ14.html
@@ -115,10 +115,38 @@
     <div class="player-card">
         <div class="player-header">
             <div>
+                <span class="player-name">J. Zarcero</span>
+                <span class="player-pos">LD</span>
+            </div>
+            <div class="rating-badge">7,0</div>
+        </div>
+        <div class="stats-container">
+            <div class="stat-row"><span class="stat-label">Minutos</span><span class="stat-value">79</span></div>
+            <div class="stat-row"><span class="stat-label">Goles en contra</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Recuperaciones</span><span class="stat-value">11</span></div>
+            <div class="stat-row"><span class="stat-label">Intercepciones</span><span class="stat-value">7</span></div>
+            <div class="stat-row"><span class="stat-label">Despejes</span><span class="stat-value">7</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos aéreos</span><span class="stat-value">5/7</span></div>
+            <div class="stat-row"><span class="stat-label">Pases clave</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Tarjetas amarillas</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Entradas</span><span class="stat-value">2/2</span></div>
+            <div class="stat-row"><span class="stat-label">Pases cortos</span><span class="stat-value">14/17</span></div>
+            <div class="stat-row"><span class="stat-label">Pases largos</span><span class="stat-value">1/5</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos suelo</span><span class="stat-value">3/9</span></div>
+            <div class="stat-row"><span class="stat-label">Posesiones perdidas</span><span class="stat-value">7</span></div>
+            <div class="stat-row"><span class="stat-label">Faltas</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Tiros fuera</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Centros</span><span class="stat-value">0/1</span></div>
+        </div>
+    </div>
+    
+    <div class="player-card">
+        <div class="player-header">
+            <div>
                 <span class="player-name">Á. Brito</span>
                 <span class="player-pos">MCD</span>
             </div>
-            <div class="rating-badge">7.0</div>
+            <div class="rating-badge">7,0</div>
         </div>
         <div class="stats-container">
             <div class="stat-row"><span class="stat-label">Minutos</span><span class="stat-value">73</span></div>
@@ -145,7 +173,7 @@
                 <span class="player-name">Javi Pardo</span>
                 <span class="player-pos">MCD/MD</span>
             </div>
-            <div class="rating-badge">6.9</div>
+            <div class="rating-badge">6,9</div>
         </div>
         <div class="stats-container">
             <div class="stat-row"><span class="stat-label">Minutos</span><span class="stat-value">73</span></div>
@@ -169,7 +197,7 @@
                 <span class="player-name">Rodri de Castro</span>
                 <span class="player-pos">MD</span>
             </div>
-            <div class="rating-badge">6.0</div>
+            <div class="rating-badge">6,0</div>
         </div>
         <div class="stats-container">
             <div class="stat-row"><span class="stat-label">Minutos</span><span class="stat-value">45</span></div>
@@ -195,7 +223,7 @@
                 <span class="player-name">Manu de V.</span>
                 <span class="player-pos">DC</span>
             </div>
-            <div class="rating-badge">6.2</div>
+            <div class="rating-badge">6,2</div>
         </div>
         <div class="stats-container">
             <div class="stat-row"><span class="stat-label">Minutos</span><span class="stat-value">59</span></div>
