Update mediocentros player details in InformeJ15.html

--- a/InformeJ15.html
+++ b/InformeJ15.html
@@ -649,11 +649,11 @@
           { number: '7', name: 'J. Martínez' }
         ], //El último sin coma
         'mediocentros': [
-          { number: '10', name: 'Kito' },
+          { number: '8', name: 'Rodri de Castro' },
           { number: '2', name: 'Á. Brito' },
-          { number: '23', name: 'Javi Pardo' },
-          { number: '19', name: 'Pablo' },
-          { number: '14', name: 'J. Ogayar' }
+          { number: '14', name: 'J. Ogayar' },
+          { number: '3', name: 'Mario' },
+          { number: '20', name: 'A. Molina' }
         ], //El último sin coma
         'delanteros': [
           { number: '9', name: 'S. Griñán' }
