Replace 'Rodri' with 'Rafa' in defenses list

--- a/InformeJ15.html
+++ b/InformeJ15.html
@@ -645,7 +645,7 @@
         'defensas': [
           { number: '16', name: 'Luisja' },
           { number: '5', name: 'Adriano' },
-          { number: '25', name: 'Rodri' },
+          { number: '6', name: 'Rafa' },
           { number: '7', name: 'J. Martínez' }
         ], //El último sin coma
         'mediocentros': [
