--- a/Stats25-26.html
+++ b/Stats25-26.html
@@ -427,31 +427,31 @@
     // Datos de los jugadores con los minutos jugados en cada partido
     // Falta el asistente del primer gol de Griñán en la J11
     const jugadores = [
-    {nombre: "J. Agudo", goles: 0, asistencias: 0, minutos: [0, 54, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]},
-    {nombre: "Gabri", goles: 0, asistencias: 0, minutos: [0, 0, 90, 0, 90, 0, 90, 0, 90, 10, 90, 0, 90, 90]},
-    {nombre: "Álvaro", goles: 0, asistencias: 0, minutos: [90, 36, 0, 90, 0, 90, 0, 90, 0, 80, 0, 90, 0, 0]},
-    {nombre: "Luisja", goles: 0, asistencias: 1, minutos: [90, 90, 90, 90, 90, 90, 0, 90, 90, 0, 0, 0, 90, 0]},
-    {nombre: "J. Martínez", goles: 1, asistencias: 0, minutos: [90, 90, 63, 90, 90, 62, 90, 52, 0, 90, 87, 0, 0, 90]},
-    {nombre: "Rafa Crooke", goles: 0, asistencias: 0, minutos: [0, 26, 0, 90, 90, 90, 0, 0, 0, 90, 90, 0, 0, 0]},
-    {nombre: "Jacobo", goles: 0, asistencias: 0, minutos: [0, 0, 63, 0, 0, 53, 0, 0, 0, 45, 0, 0, 82, 0]},
-    {nombre: "Rodri", goles: 0, asistencias: 0, minutos: [90, 90, 90, 0, 0, 0, 0, 0, 65, 0, 0, 90, 0, 90]},
-    {nombre: "Adriano", goles: 0, asistencias: 1, minutos: [90, 64, 27, 90, 68, 0, 90, 90, 90, 0, 90, 90, 90, 90]},
-    {nombre: "Á. Infante", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0, 22, 0, 0, 0, 25, 45, 0, 0, 8, 0]},
-    {nombre: "A. Molina", goles: 1, asistencias: 1, minutos: [45, 75, 0, 45, 0, 2, 61, 45, 15, 45, 3, 90, 0, 17]},
-    {nombre: "L. Lausín", goles: 0, asistencias: 0, minutos: [0, 15, 20, 19, 21, 0, 0, 0, 0, 0, 0, 0, 0, 0]},
-    {nombre: "J. Zarcero", goles: 0, asistencias: 1, minutos: [90, 0, 90, 71, 45, 90, 90, 90, 90, 90, 90, 90, 90, 79]},
-    {nombre: "Kito", goles: 2, asistencias: 4, minutos: [90, 75, 70, 45, 68, 0, 90, 45, 75, 45, 45, 33, 74, 90]},
-    {nombre: "Víctor Jaén", goles: 0, asistencias: 0, minutos: [21, 15, 63, 0, 45, 90, 38, 45, 20, 10, 45, 16, 8, 11]},
-    {nombre: "Á. Brito", goles: 0, asistencias: 0, minutos: [72, 75, 90, 82, 45, 90, 90, 38, 0, 0, 45, 0, 90, 73]},
-    {nombre: "Pablo", goles: 1, asistencias: 0, minutos: [69, 0, 0, 0, 0, 0, 0, 45, 70, 80, 82, 90, 0, 45]},
-    {nombre: "Javi Pardo", goles: 2, asistencias: 0, minutos: [0, 90, 90, 90, 69, 28, 0, 45, 0, 90, 45, 74, 90, 73]},
-    {nombre: "Mario", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0, 22, 62, 90, 82, 90, 45, 8, 90, 16, 17]},
-    {nombre: "J. Ogayar", goles: 1, asistencias: 1, minutos: [18, 15, 27, 90, 45, 28, 61, 66, 90, 90, 82, 90, 90, 90]},
-    {nombre: "Rodri de Castro", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0, 0, 0, 29, 24, 75, 45, 45, 57, 0, 45]},
-    {nombre: "H. Panizo", goles: 0, asistencias: 1, minutos: [45, 64, 27, 45, 68, 88, 52, 45, 0, 0, 8, 74, 82, 0]},
-    {nombre: "Manu Medina", goles: 0, asistencias: 0, minutos: [0, 0, 0, 8, 22, 0, 0, 8, 15, 0, 45, 0, 0, 0]},
-    {nombre: "Manu de V.", goles: 0, asistencias: 0, minutos: [45, 26, 27, 0, 0, 0, 0, 0, 0, 0, 0, 0, 32, 59]},
-    {nombre: "S. Griñán", goles: 11, asistencias: 0, minutos: [45, 90, 63, 45, 90, 90, 90, 90, 90, 90, 90, 16, 58, 31]},
+    {nombre: "J. Agudo", goles: 0, asistencias: 0, minutos: [0, 54, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]},
+    {nombre: "Gabri", goles: 0, asistencias: 0, minutos: [0, 0, 90, 0, 90, 0, 90, 0, 90, 10, 90, 0, 90, 90, 90]},
+    {nombre: "Álvaro", goles: 0, asistencias: 0, minutos: [90, 36, 0, 90, 0, 90, 0, 90, 0, 80, 0, 90, 0, 0, 0]},
+    {nombre: "Luisja", goles: 0, asistencias: 1, minutos: [90, 90, 90, 90, 90, 90, 0, 90, 90, 0, 0, 0, 90, 0, 90]},
+    {nombre: "J. Martínez", goles: 1, asistencias: 0, minutos: [90, 90, 63, 90, 90, 62, 90, 52, 0, 90, 87, 0, 0, 90, 90]},
+    {nombre: "Rafa Crooke", goles: 0, asistencias: 0, minutos: [0, 26, 0, 90, 90, 90, 0, 0, 0, 90, 90, 0, 0, 0, 90]},
+    {nombre: "Jacobo", goles: 0, asistencias: 0, minutos: [0, 0, 63, 0, 0, 53, 0, 0, 0, 45, 0, 0, 82, 0, 0]},
+    {nombre: "Rodri", goles: 0, asistencias: 0, minutos: [90, 90, 90, 0, 0, 0, 0, 0, 65, 0, 0, 90, 0, 90, 29]},
+    {nombre: "Adriano", goles: 0, asistencias: 1, minutos: [90, 64, 27, 90, 68, 0, 90, 90, 90, 0, 90, 90, 90, 90, 61]},
+    {nombre: "Á. Infante", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0, 22, 0, 0, 0, 25, 45, 0, 0, 8, 0, 0]},
+    {nombre: "A. Molina", goles: 1, asistencias: 1, minutos: [45, 75, 0, 45, 0, 2, 61, 45, 15, 45, 3, 90, 0, 17, 61]},
+    {nombre: "L. Lausín", goles: 0, asistencias: 0, minutos: [0, 15, 20, 19, 21, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]},
+    {nombre: "J. Zarcero", goles: 0, asistencias: 1, minutos: [90, 0, 90, 71, 45, 90, 90, 90, 90, 90, 90, 90, 90, 79, 0]},
+    {nombre: "Kito", goles: 2, asistencias: 4, minutos: [90, 75, 70, 45, 68, 0, 90, 45, 75, 45, 45, 33, 74, 90, 0]},
+    {nombre: "Víctor Jaén", goles: 0, asistencias: 0, minutos: [21, 15, 63, 0, 45, 90, 38, 45, 20, 10, 45, 16, 8, 11, 29]},
+    {nombre: "Á. Brito", goles: 0, asistencias: 0, minutos: [72, 75, 90, 82, 45, 90, 90, 38, 0, 0, 45, 0, 90, 73, 79]},
+    {nombre: "Pablo", goles: 1, asistencias: 0, minutos: [69, 0, 0, 0, 0, 0, 0, 45, 70, 80, 82, 90, 0, 45, 0]},
+    {nombre: "Javi Pardo", goles: 2, asistencias: 0, minutos: [0, 90, 90, 90, 69, 28, 0, 45, 0, 90, 45, 74, 90, 73, 0]},
+    {nombre: "Mario", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0, 22, 62, 90, 82, 90, 45, 8, 90, 16, 17, 90]},
+    {nombre: "J. Ogayar", goles: 1, asistencias: 1, minutos: [18, 15, 27, 90, 45, 28, 61, 66, 90, 90, 82, 90, 90, 90, 90]},
+    {nombre: "Rodri de Castro", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0, 0, 0, 29, 24, 75, 45, 45, 57, 0, 45, 61]},
+    {nombre: "H. Panizo", goles: 0, asistencias: 1, minutos: [45, 64, 27, 45, 68, 88, 52, 45, 0, 0, 8, 74, 82, 0, 0]},
+    {nombre: "Manu Medina", goles: 0, asistencias: 0, minutos: [0, 0, 0, 8, 22, 0, 0, 8, 15, 0, 45, 0, 0, 0, 11]},
+    {nombre: "Manu de V.", goles: 0, asistencias: 0, minutos: [45, 26, 27, 0, 0, 0, 0, 0, 0, 0, 0, 0, 32, 59, 90]},
+    {nombre: "S. Griñán", goles: 11, asistencias: 0, minutos: [45, 90, 63, 45, 90, 90, 90, 90, 90, 90, 90, 16, 58, 31, 29]},
     {nombre: "Manu (JB)", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0, 0, 0, 29, 0, 0, 0, 0, 0, 0, 0]}
     ];
 
