--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -846,6 +846,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
@@ -863,7 +864,8 @@
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:0, minutes:90, goals:0, assists:0, cards:0, comment:'(6,0)'},
-        {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,3)'}
+        {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,3)'},
+        {points:4, minutes:90, goals:0, assists:0, cards:0, comment:'(6,8)'}
       ]},
 
     { id:3, name:'Álvaro', pos:'Portero', status:'OK', special: false, performances:[
@@ -879,6 +881,7 @@
         {points:null, minutes:80, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:-3, minutes:90, goals:0, assists:0, cards:0, comment:'(5,0)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
       ]},
@@ -897,7 +900,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,0)'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
+        {points:10, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (8,1)'}
       ]},
 
     { id:5, name:'J. Martínez', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -914,7 +918,8 @@
         {points:null, minutes:87, goals:0, assists:0, cards:1, comment:'🟨↪️ (-)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-        {points:3, minutes:90, goals:0, assists:0, cards:0, comment:'(6,6)'}
+        {points:3, minutes:90, goals:0, assists:0, cards:0, comment:'(6,6)'},
+        {points:5, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,1)'}
       ]},
 
     { id:6, name:'Rafa Crooke', pos:'Defensa', status:'OK', special: false, performances:[
@@ -931,7 +936,8 @@
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
+        {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'}
       ]},
 
     { id:7, name:'Jacobo', pos:'Defensa', status:'OK', special: false, performances:[
@@ -948,7 +954,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:4, minutes:82, goals:0, assists:0, cards:0, comment:'↪️ (6,8)'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
       ]},
 
     { id:8, name:'Rodri', pos:'Defensa', status:'OK', special: false, performances:[
@@ -965,7 +972,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:-2, minutes:90, goals:0, assists:0, cards:0, comment:'(5,6)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-        {points:2, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,4)'}
+        {points:2, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,4)'},
+        {points:4, minutes:29, goals:0, assists:0, cards:0, comment:'↩️ (6,8)'}
       ]},
 
     { id:9, name:'Adriano', pos:'Defensa', status:'OK', special: false, performances:[
@@ -982,7 +990,8 @@
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
         {points:-1, minutes:90, goals:0, assists:0, cards:0, comment:'(5,8)'},
         {points:2, minutes:90, goals:0, assists:0, cards:0, comment:'(6,4)'},
-        {points:4, minutes:90, goals:0, assists:0, cards:0, comment:'(6,8)'}
+        {points:4, minutes:90, goals:0, assists:0, cards:0, comment:'(6,8)'},
+        {points:7, minutes:61, goals:0, assists:0, cards:0, comment:'↪️ (7,5)'}
       ]},
 
     { id:10, name:'Á. Infante', pos:'Defensa', status:'Duda', special: false, performances:[
@@ -999,7 +1008,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:3, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
     { id:11, name:'A. Molina', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1016,7 +1026,8 @@
         {points:null, minutes:3, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:5, minutes:90, goals:0, assists:1, cards:0, comment:'🅰️ (6,8+🅰️)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-        {points:2, minutes:17, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'}
+        {points:2, minutes:17, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
+        {points:3, minutes:61, goals:0, assists:0, cards:0, comment:'↪️ (6,7)'}
       ]},
 
     { id:12, name:'L. Lausín', pos:'Defensa', status:'Duda', special: false, performances:[
@@ -1033,7 +1044,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
       ]},
 
     { id:13, name:'J. Zarcero', pos:'Defensa', status:'Lesionado', special: false, performances:[
@@ -1051,6 +1063,7 @@
         {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,2)'},
         {points:4, minutes:90, goals:0, assists:0, cards:0, comment:'(6,9)'},
         {points:5, minutes:79, goals:0, assists:0, cards:1, comment:'🟨↪️ (7,0)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
     { id:14, name:'Kito', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1067,7 +1080,8 @@
         {points:null, minutes:45, goals:1, assists:1, cards:0, comment:'↩️⚽🅰️ (0,0+⚽+🅰️)'},
         {points:3, minutes:33, goals:0, assists:0, cards:0, comment:'↩️ (6,7)'},
         {points:11, minutes:74, goals:1, assists:0, cards:0, comment:'↪️⚽ (7,6+⚽)'},
-        {points:6, minutes:90, goals:0, assists:1, cards:0, comment:'🅰️ (7,0+🅰️)'}
+        {points:6, minutes:90, goals:0, assists:1, cards:1, comment:'🟨🅰️ (7,0+🅰️)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Sancionado'}
       ]},
 
     { id:15, name:'Víctor Jaén', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1084,10 +1098,11 @@
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:2, minutes:16, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
         {points:2, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
-        {points:-1, minutes:11, goals:0, assists:0, cards:0, comment:'↩️ (5,9)'}
+        {points:-1, minutes:11, goals:0, assists:0, cards:0, comment:'↩️ (5,9)'},
+        {points:1, minutes:29, goals:0, assists:0, cards:1, comment:'🟨↩️ (6,3)'}
       ]},
 
-    { id:16, name:'Á. Brito', pos:'Centrocampista', status:'OK', special: false, performances:[
+    { id:16, name:'Á. Brito', pos:'Centrocampista', status:'Duda', special: false, performances:[
         {points:7, minutes:72, goals:0, assists:0, cards:0, comment:'↪️ (7,5)'},
         {points:null, minutes:75, goals:0, assists:0, cards:1, comment:'🟨↪️ (Sin grabación)'},
         {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,1)'},
@@ -1101,10 +1116,11 @@
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'},
-        {points:5, minutes:73, goals:0, assists:0, cards:0, comment:'↪️ (7,0)'}
+        {points:5, minutes:73, goals:0, assists:0, cards:0, comment:'↪️ (7,0)'},
+        {points:6, minutes:79, goals:0, assists:0, cards:0, comment:'↪️ (7,3)'}
       ]},
 
-    { id:17, name:'Pablo', pos:'Centrocampista', status:'OK', special: false, performances:[
+    { id:17, name:'Pablo', pos:'Centrocampista', status:'Duda', special: false, performances:[
         {points:4, minutes:69, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,9)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
@@ -1118,7 +1134,8 @@
         {points:null, minutes:82, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,2)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-        {points:2, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'}
+        {points:2, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
     { id:18, name:'Javi Pardo', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1135,7 +1152,8 @@
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:1, minutes:74, goals:0, assists:0, cards:0, comment:'↪️ (6,3)'},
         {points:2, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,5)'},
-        {points:4, minutes:73, goals:0, assists:0, cards:0, comment:'↪️ (6,9)'}
+        {points:4, minutes:73, goals:0, assists:0, cards:0, comment:'↪️ (6,9)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
       ]},
 
     { id:19, name:'Mario', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1152,7 +1170,8 @@
         {points:null, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,0)'},
         {points:3, minutes:16, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'},
-        {points:1, minutes:17, goals:0, assists:0, cards:0, comment:'↩️ (6,2)'}
+        {points:1, minutes:17, goals:0, assists:0, cards:0, comment:'↩️ (6,2)'},
+        {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,1)'}
       ]},
 
     { id:20, name:'J. Ogayar', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1169,7 +1188,8 @@
         {points:null, minutes:82, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:9, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (7,2+⚽)'},
         {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,0)'},
-        {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,2)'}
+        {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,2)'},
+        {points:3, minutes:90, goals:0, assists:0, cards:0, comment:'(6,6)'}
       ]},
 
     { id:21, name:'Rodri de Castro', pos:'Atacante', status:'OK', special: false, performances:[
@@ -1186,7 +1206,8 @@
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:3, minutes:57, goals:0, assists:0, cards:0, comment:'↪️ (6,7)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-        {points:0, minutes:45, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,0)'}
+        {points:0, minutes:45, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,0)'},
+        {points:1, minutes:61, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,2)'}
       ]},
 
     { id:22, name:'H. Panizo', pos:'Atacante', status:'Duda', special: false, performances:[
@@ -1203,6 +1224,7 @@
         {points:null, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:4, minutes:74, goals:0, assists:0, cards:0, comment:'↪️ (6,8)'},
         {points:9, minutes:82, goals:0, assists:1, cards:0, comment:'↪️🅰️ (7,6+🅰️)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
@@ -1220,7 +1242,8 @@
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
+        {points:2, minutes:11, goals:0, assists:0, cards:0, comment:'↩️ (6,5)'}
       ]},
 
     { id:24, name:'Manu de V.', pos:'Atacante', status:'OK', special: false, performances:[
@@ -1237,7 +1260,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:2, minutes:32, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
-        {points:1, minutes:59, goals:0, assists:0, cards:0, comment:'↪️ (6,2)'}
+        {points:1, minutes:59, goals:0, assists:0, cards:0, comment:'↪️ (6,2)'},
+        {points:0, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,0)'},
       ]},
 
     { id:25, name:'S. Griñán', pos:'Atacante', status:'OK', special: false, performances:[
@@ -1254,7 +1278,8 @@
         {points:null, minutes:90, goals:2, assists:0, cards:0, comment:'⚽⚽ (0,0+⚽⚽)'},
         {points:2, minutes:16, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
         {points:2, minutes:58, goals:0, assists:0, cards:0, comment:'↪️ (6,5)'},
-        {points:9, minutes:31, goals:1, assists:0, cards:0, comment:'↩️⚽ (7,2+⚽)'}
+        {points:9, minutes:31, goals:1, assists:0, cards:0, comment:'↩️⚽ (7,2+⚽)'},
+        {points:2, minutes:29, goals:0, assists:0, cards:0, comment:'↩️ (6,5)'}
       ]},
 
     { id:26, name:'Manu (JB)', pos:'Defensa', status:'OK', special: true, performances:[
@@ -1270,16 +1295,20 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'}
       ]}
   ];
   
   // 📰 Noticias del equipo
   const news = [
-    { playerId: 10, title: 'Duda', text: "Molestias de cuello, 7-10 días" },
+    { playerId: 16, title: 'Duda', text: "Molestias en la pierna" },
+    { playerId: null, title: 'Jornada 15', text: "E.F.M.O. Boadilla 'B' 0-0 CD Nuevo Boadilla 'D'", url: 'InformeJ15.html' },
     { playerId: null, title: 'Stats J14', text: "Estadísticas detalladas de la J14", url: 'StatsJ14.html' },
+    { playerId: 17, title: 'Duda', text: "Molestias en el rotuliano" },
     { playerId: 13, title: 'Lesión', text: "Fisura en la órbita, 1-3 semanas" },
     { playerId: null, title: 'Jornada 14', text: "CD Galapagar 'C' 4-1 E.F.M.O. Boadilla 'B'", url: 'InformeJ14.html' },
+    { playerId: 10, title: 'Duda', text: "Molestias de cuello, 7-10 días" },
     { playerId: 22, title: 'Duda', text: "Esguince de tobillo, 1-3 semanas" },
     { playerId: null, title: 'Jornada 13', text: "CDE Colegio Juan Pablo II 4-1 E.F.M.O. Boadilla 'B'", url: 'InformeJ13.html' },
     { playerId: null, title: 'Stats J8', text: "Estadísticas detalladas de la J8", url: 'StatsJ8.html' },
@@ -1287,7 +1316,6 @@
    // { playerId: 11, title: 'Duda', text: "Molestias de tobillo, 1-2 semanas" }, //Molina
    // { playerId: 5, title: 'Duda', text: "Lesión de tobillo, 3-5 semanas" }, //Martínez
     { playerId: 23, title: 'Duda', text: "Fisura de peroné, 1-3 meses" },
-   // { playerId: 2, title: 'Duda', text: "Golpe en la cadera, 6-10 días" }, //Gabri
     { playerId: null, title: 'Jornada 11', text: "Escuela Europea CF 3-3 E.F.M.O. Boadilla 'B'", url: 'InformeJ11.html' },
     { playerId: null, title: 'Jornada 10', text: "E.F.M.O. Boadilla 'B' 1-1 CDE Delta Juventud FC", url: 'InformeJ10.html' },
    // { playerId: 4, title: 'Duda', text: "Molestias musculares, 1-3 semanas" }, //Luisja
