--- a/Stats25-26.html
+++ b/Stats25-26.html
@@ -452,7 +452,7 @@
     {nombre: "Manu Medina", goles: 0, asistencias: 0, minutos: [0, 0, 0, 8, 22, 0, 0, 8, 15, 0, 45, 0, 0, 0, 11]},
     {nombre: "Manu de V.", goles: 0, asistencias: 0, minutos: [45, 26, 27, 0, 0, 0, 0, 0, 0, 0, 0, 0, 32, 59, 90]},
     {nombre: "S. Griñán", goles: 11, asistencias: 0, minutos: [45, 90, 63, 45, 90, 90, 90, 90, 90, 90, 90, 16, 58, 31, 29]},
-    {nombre: "Manu (JB)", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0, 0, 0, 29, 0, 0, 0, 0, 0, 0, 0]}
+    {nombre: "Manu (JB)", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0, 0, 0, 29, 0, 0, 0, 0, 0, 0, 0, 0]}
     ];
 
     // Función para obtener la clase de color según el índice de la jornada (patrón de 3)
