--- a/InformeJ16.html
+++ b/InformeJ16.html
@@ -644,15 +644,15 @@
         'defensas': [
           { number: '16', name: 'Luisja' },
           { number: '5', name: 'Adriano' },
-          { number: '25', name: 'Rodri' },
+          { number: '6', name: 'Rafa' },
           { number: '7', name: 'J. Martínez' }
         ], //El último sin coma
         'mediocentros': [
-          { number: '10', name: 'Kito' },
+          { number: '9', name: 'S. Griñán' },
           { number: '23', name: 'Javi Pardo' },
-          { number: '14', name: 'J. Ogayar' },
+          { number: '10', name: 'Kito' },
           { number: '2', name: 'Á. Brito' },
-          { number: '8', name: 'Rodri de Castro' }
+          { number: '24', name: 'H. Panizo' }
         ], //El último sin coma
         'delanteros': [
           { number: '18', name: 'Manu de V.' }
