--- a/InformeJ16.html
+++ b/InformeJ16.html
@@ -642,15 +642,15 @@
           { number: '1', name: 'Gabri' }
         ],
         'defensas': [
-          { number: '16', name: 'Luisja' },
+          { number: '7', name: 'J. Martínez' },
           { number: '5', name: 'Adriano' },
-          { number: '6', name: 'Rafa' },
-          { number: '7', name: 'J. Martínez' }
+          { number: '25', name: 'Rodri' },
+          { number: '12', name: 'L. Lausín' }
         ], //El último sin coma
         'mediocentros': [
-          { number: '9', name: 'S. Griñán' },
-          { number: '23', name: 'Javi Pardo' },
           { number: '10', name: 'Kito' },
+          { number: '3', name: 'Mario' },
+          { number: '23', name: 'Javi Pardo' },
           { number: '2', name: 'Á. Brito' },
           { number: '24', name: 'H. Panizo' }
         ], //El último sin coma
