--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -1030,7 +1030,7 @@
         {points:4, minutes:61, goals:0, assists:0, cards:0, comment:'↪️ (6,8)'}
       ]},
 
-    { id:12, name:'L. Lausín', pos:'Defensa', status:'Duda', special: false, performances:[
+    { id:12, name:'L. Lausín', pos:'Centrocampista', status:'Duda', special: false, performances:[
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
         {points:2, minutes:20, goals:0, assists:0, cards:0, comment:'↩️ (6,5)'},
